--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@
 #set-option -g prefix C-a
 #bind-key C-a send-prefix
 
+# set tmux to use zsh (default) shell.
+set-option -g default-shell /usr/bin/zsh
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
