fixed broken zsh path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@
 #bind-key C-a send-prefix
 
 # set tmux to use zsh (default) shell.
-set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell /bin/zsh
 
 # split panes using | and -
 bind | split-window -h
