--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,16 @@
 #set-option -g prefix C-a
 #bind-key C-a send-prefix
 
-# set tmux to use zsh (default) shell.
-set-option -g default-shell /bin/zsh
+# Set default shelld to the local configured shell.
+set -g default-shell $SHELL
+
+# Copy-paste integration
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind-key c new-window -c "#{pane_current_path}"
+bind-key | split-window -h -c "#{pane_current_path}"
+bind-key - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
