--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,8 @@
 
   co = checkout
 
+  cob = checkout -b
+
   com = commit -m
 
   glog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
