updated git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,10 @@
 
   com = commit -m
 
+  df = diff
+
+  dfw = diff --word-diff
+
   glog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
 
   lg = log
@@ -27,6 +31,8 @@
   rstall = reset HEAD .
 
   st = status
+
+  stats = shortlog -sn
 
   sth = stash
 
