--- a/.oxalate_shell_rc
+++ b/.oxalate_shell_rc
@@ -74,7 +74,7 @@ export LSCOLORS=GxFxCxDxBxegedabagacedkk
 export EDITOR=vim
 
 # Grep options
-export GREP_OPTIONS='--color=auto'
+alias grep='grep --color=auto --exclude=tags --exclude-dir=venv'
 
 # Ctags.
 alias gentags='ctags -R .'
