--- a/.oxalate_shell_rc
+++ b/.oxalate_shell_rc
@@ -2,8 +2,16 @@
 
 alias gcc='gcc-7'
 alias g++='g++-7'
-alias tar='gtar'
-alias sed='gsed'
+
+export CLICOLOR=1
+
+# BSD
+export LSCOLORS='GxFxCxDxBxegedabagacedkk'
+
+# Linux
+export LS_COLORS='di=1;36:ln=1;35:so=1;32:pi=1;33:ex=1;31:bd=34;46:cd=34;43:su=30;41:sg=30;46:tw=30;42:ow=34;43'
+alias ls='ls --color=auto'
+
 
 # My own aliases.
 alias q='exit'
@@ -17,6 +25,7 @@ alias lsl='ls -l'
 alias pd='pwd'
 alias null='/dev/null'
 alias t='time'
+alias rm='rm -i'
 
 # Directories
 alias home='cd ~'
@@ -67,14 +76,12 @@ alias loadsecrets='source ~/.secrets.sh'
 alias sl='ls'
 alias givm='gvim'
 
-export CLICOLOR=1
-export LSCOLORS=GxFxCxDxBxegedabagacedkk
 
 # Moar environment variables.
 export EDITOR=vim
 
 # Grep options
-alias grep='grep --color=auto --exclude=tags --exclude-dir=venv'
+alias grep='grep --color=auto --exclude=tags --exclude-dir=.git --exclude-dir=venv'
 
 # Ctags.
 alias gentags='ctags -R .'
@@ -91,13 +98,25 @@ export DYLD_LIBRARY_PATH="$DYLD_LIBRARY_PATH:/Developer/NVIDIA/CUDA-8.0/lib"
 
 export PATH="/usr/local/sbin:$PATH"
 
+# Coreutils
+export PATH="/usr/local/opt/coreutils/libexec/gnubin:$PATH"
+export MANPATH="/usr/local/opt/coreutils/libexec/gnuman:$MANPATH"
+
+# Curl
+export PATH="/usr/local/opt/curl/bin:$PATH"
+
+# Getopt
+export PATH="/usr/local/opt/gnu-getopt/bin:$PATH"
+
+# Tar
+export PATH="/usr/local/opt/gnu-tar/libexec/gnubin:$PATH"
+export MANPATH="/usr/local/opt/gnu-tar/libexec/gnuman:$MANPATH"
+
 # Arcanist
 export PATH="$PATH:/$HOME/toolchains/arcanist/bin"
 
 # MagicSnippets scripts
 export PATH="$PATH:$HOME/Dropbox/Projects/MagicSnippets"
-
-alias meow='cat'
 
 # For note taking.
 notes() {
