--- a/.oxalate_shell_rc
+++ b/.oxalate_shell_rc
@@ -187,6 +187,16 @@ fdr() {
   cd "$DIR"
 }
 
+# fe [FUZZY PATTERN] - Open the selected file with the default editor
+#   - Bypass fuzzy finder if there's only one match (--select-1)
+#   - Exit if there's no match (--exit-0)
+fe() {
+  local files
+  IFS=$'\n' files=($(fzf-tmux --query="$1" --multi --select-1 --exit-0))
+  # shellcheck disable=SC2128
+  [[ -n "$files" ]] && ${EDITOR:-vim} "${files[@]}"
+}
+
 # fkill - kill process
 # shellcheck source=/dev/null
 fkill() {
