--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,16 @@
 # remap prefix from 'C-b' to 'C-a'
 #unbind C-b
 #set-option -g prefix C-a
-#bind-key C-a send-prefix
+#bind-key C-b send-prefix
+
+# Start window numbering at 1
+set -g base-index 1
 
 # Set default shelld to the local configured shell.
 set -g default-shell $SHELL
 
 # Copy-paste integration
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+#set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 # split panes using | and -
 bind-key c new-window -c "#{pane_current_path}"
@@ -17,10 +20,10 @@ unbind '"'
 unbind %
 
 # switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+#bind -n M-Left select-pane -L
+#bind -n M-Right select-pane -R
+#bind -n M-Up select-pane -U
+#bind -n M-Down select-pane -D
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 #set -g mouse-select-window on
@@ -28,7 +31,6 @@ bind -n M-Down select-pane -D
 #set -g mouse-resize-pane on
 
 # Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
-#
+#set -g mouse on
 
 bind r source-file ~/.tmux.conf
