--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: bash
-addons:
-  apt:
-    sources:
-    - debian-sid    # Grab ShellCheck from the Debian repo
-    packages:
-    - shellcheck
-# command to run tests
-script: make test
+
+services:
+  - docker
+
+before_install:
+  - docker pull koalaman/shellcheck
+
+script:
+  - docker run -v $(pwd):/scripts koalaman/shellcheck test.sh
+
+matrix:
+  fast_finish: true
