--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,9 @@
-# remap prefix from 'C-b' to 'C-a'
-#unbind C-b
-#set-option -g prefix C-a
-#bind-key C-b send-prefix
-
-# Start window numbering at 1
-set -g base-index 1
-
 # Set default shelld to the local configured shell.
 set -g default-shell $SHELL
 
-# Copy-paste integration
-#set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# Copy-paste integration (MacOS)
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 
 # split panes using | and -
 bind-key c new-window -c "#{pane_current_path}"
@@ -31,6 +24,7 @@ unbind %
 #set -g mouse-resize-pane on
 
 # Enable mouse mode (tmux 2.1 and above)
-#set -g mouse on
+set -g mouse on
+setw -g mode-keys vi
 
 bind r source-file ~/.tmux.conf
