updated alacritty settings and bashrc

--- a/.oxalate_shell_rc
+++ b/.oxalate_shell_rc
@@ -6,7 +6,7 @@ export CLICOLOR=1
 export LSCOLORS='GxFxCxDxBxegedabagacedkk'
 
 # Linux
-export LS_COLORS='di=1;36:ln=1;35:so=1;32:pi=1;33:ex=1;31:bd=34;46:cd=34;43:su=30;41:sg=30;46:tw=30;42:ow=34;43'
+export LS_COLORS='di=1;33:ln=1;35:so=1;32:pi=1;33:ex=1;31:bd=34;46:cd=34;43:su=30;41:sg=30;46:tw=30;42:ow=34;43'
 alias ls='ls --color=auto'
 
 export EDITOR='nvim'
@@ -248,3 +248,84 @@ ftags() {
 }
 
 # That's all folks!
+
+## Generic
+
+function gregions() {
+  REGIONS=$(gcloud compute regions list)
+  echo $REGIONS | cut -d " " -f 1 | tail -n +2
+}
+
+function gzones() {
+  ZONES=$(gcloud compute zones list)
+  echo $ZONES | cut -d " " -f 1 | tail -n +2
+}
+
+function gproject_set() {
+  gcloud config set project $1
+}
+
+function gproject() {
+  gcloud config get-value project
+}
+
+function gprojects() {
+  gcloud projects list
+}
+
+function set_zone() {
+  gcloud config set compute/zone $1
+}
+
+function set_region() {
+  gcloud config set compute/region $1
+}
+
+## Compute
+
+function allow_http_ports() {
+  allow_port 80
+  allow_port 443
+}
+
+function allow_port() {
+  gcloud compute firewall-rules create allow-port-$1 --allow tcp:$1
+}
+
+function gssh() {
+  gcloud compute ssh $@
+}
+
+function gssh_8080() {
+  gssh $1 -- -L 8080:localhost:8080
+}
+
+function ginstances() {
+  gcloud compute instances list
+}
+
+function ginstance_delete() {
+  gcloud compute instances delete --quiet $@
+}
+
+function ginstance_stop() {
+  gcloud compute instances stop --quiet $@
+}
+
+function ginstance_start() {
+  gcloud compute instances start --quiet $@
+}
+
+function ginstance_describe() {
+  gcloud compute instances describe $@
+}
+
+function ginstance_serial_logs() {
+  gcloud compute instances get-serial-port-output $@
+}
+
+## Composer
+
+function composer_run() {
+  gcloud beta composer environments run $1 --location=us-central1 $2 -- $3
+}
