--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,4 +9,7 @@ bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user
 set -g mouse on
 setw -g mode-keys vi
 
+# Set escape keypress val time to 0 (no delay).
+set -sg escape-time 0
+
 bind r source-file ~/.tmux.conf
