--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,11 @@
 # Set default shelld to the local configured shell.
 set -g default-shell $SHELL
 
+# Automatically rename tmux window to current working directory.
+set -g status-interval 5
+set -g automatic-rename on
+set -g automatic-rename-format '#{b:pane_current_path}'
+
 # Copy-paste integration (MacOS)
 set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
