--- a/.oxalate_shell_rc
+++ b/.oxalate_shell_rc
@@ -100,7 +100,7 @@ reformat_quotes() {
 
 # For note taking.
 notes() {
-  if [ "$1" == '' ]; then
+  if [[ "$#" -eq 0 ]]; then
     less "$HOME/Dropbox/notes.txt"
   else
     echo "$@" >> "$HOME/Dropbox/notes.txt"
