--- a/.oxalate_shell_rc
+++ b/.oxalate_shell_rc
@@ -1,9 +1,15 @@
 export CLICOLOR=1
+
+# BSD
+# export LSCOLORS='GxFxCxDxBxegedabagacedkk'
+
+# Linux
+# export LS_COLORS='di=1;33:ln=1;35:so=1;32:pi=1;33:ex=1;31:bd=34;46:cd=34;43:su=30;41:sg=30;46:tw=30;42:ow=34;43'
+
 export EDITOR='nvim'
 
 # My own aliases.
 alias q='exit'
-alias c='clear'
 alias h='history'
 alias cs='clear;ls'
 alias null='/dev/null'
